Bootstrap update for index file (main page)

--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,49 @@
 
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Eat Safe Foods</title>
         <link rel = "icon" href = "https://image.flaticon.com/icons/png/128/3649/3649260.png" type = "image/x-icon">
         <script defer src="js/scripts.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+       <!-- Bootstrap files -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
 
-    <body>
-        <div id="page-container">
+    <body class="flex-container">
         <!-- Header -->
         <header class="flex-container">
-            <a href="./index.html"><img id="logo" src="./img/logo.png"/></a>
+            <!-- <a href="./index.html"><img id="logo" src="./img/logo.png"/></a>
             <nav>
                 <span><a href="./index.html">Main</a></span>
-                <span><a href="./search.html">Search</a></span>
-                <span><a href="./form.html">Form</a></span>
+                <span><a>Map</a></span>
+                <span><a href="./form.html">Report Form</a></span>
+            </nav> -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="./index.html"><img id="logo" src="./img/logo.png"/></a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class=" top-navbar collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li  class="nav-item active">
+                      <a class="nav-link" href="./index.html">Main</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="#">Map</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link" href="./form.html">Report Form</a>
+                      </li>
+                  </ul>
+                </div>
             </nav>
         </header>
 
@@ -32,15 +56,15 @@
             <div id="intro" class="flex-container">
                 <div class="content">
                     <h2>Welcome to Eat Safe Foods!!!</h2>
-                    <h3>The site is developed by GGTea <br>Smile if you see this! &#128540; </h3>
+                    <h3>Hi, our site allows you to check the ... </h3>
                 </div>
             </div>
 
             <!-- Features Section -->
-            <div id="features">
+            <div id="features flex-container">
                 <h2>Essential Features</h2>
                 <h3>What do we offer?</h3>
-                <div class="flex-container items">
+                <div class="items">
                     <figure class="item">
                         <div></div>
                         <div>
@@ -70,7 +94,7 @@
         <footer id="about">
             <p>GGTea: Gaurav Dali, Gabriel Estrella, Akpokli Foli Sosro, Edward Trabucco, Thinh Vo</p>
             <p>USG @2020</p>
-        </footer>   
-        </div>
+        </footer>
     </body>
+    
 </html>
